# flappy

./: Cargo.toml
src/: camera.rs  main.rs
