[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = ["wayland", "dynamic"] }
bevy_rapier2d = { version = "0.19.0", features = [ "debug-render" ] }
iyes_loopless = "0.9"
rand = "0.8.5"
